--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Trabajos</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+<!--         <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>    -->
           <li class="nav__item">
             <a href="#about" class="nav__link">Sobre mí</a>
           </li>
