--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <span>Samuel Ramírez Garrido</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>Sociólogo & Cientifico de Datos.</p>
+        <p>Sociólogo & Científico de Datos.</p>
         <a href="#contact" class="btn btn--pink">Contáctame</a>
       </div>
     </div>
@@ -76,6 +76,7 @@
 
           <!-- Each div with the work__box class is a project. -->
 
+<!-- Trabajo 1 -->
           <div class="work__box">
             <div class="work__text">
               <h3>Dashboard Tendencias Twitter</h3>
@@ -103,6 +104,7 @@
               <img src="./images/trabajo1.png" class="work__image" alt="Project 1" />
             </div>
           </div>
+<!-- Trabajo 2 -->
 
           <div class="work__box">
             <div class="work__text">
@@ -130,22 +132,23 @@
             </div>
           </div>
 
+<!-- Trabajo 3 -->
+
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>Webscraping</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Extracción de datos desde diversas fuentes web.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Python</li>
+                <li>R</li>
+                <li>Selenium</li>
+                <li>APIs</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://github.com/samuelsoc/scraper_youtube" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="#">
@@ -154,29 +157,14 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/webscraping.png" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ***** Clients ***** -->
 
-    <section class="client" id="clients">
-      <div class="row">
-        <h2>Clients</h2>
-        <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
-        </div>
-      </div>
-    </section>
 
     <!-- ***** About ***** -->
 
