--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="about__content">
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
-            <p>Estudié Sociología, en la Universidad de Valparaiso, Chile.
+            <p>Soy Sociólogo de profesión, con más de 5 años de experiencia en el mundo de los datos. Mis conocimientos de metodologías de investigación y programación, me han permitido asesorar investigaciones, desarrollar integraciones de datos con visualizadores, participar en la implementacion de proyectos de datos abiertos, segmentaciones de clientes y extracciones de datos desde diversas fuentes.
 
             </p>
             <!-- Provide a link to your resume -->
