--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">Mi CV</a>
+            <a href="https://www.dropbox.com/s/7uug6p508idh3u4/CV_samuel_2021.pdf?dl=0" class="btn">Mi CV</a>
           </div>
 
           <div class="about__photo-container">
