--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href="https://www.criteria.cl/twitteria/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                <a href="https://www.criteria.cl/twitteria/" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
