--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
         <div class="about__content">
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
-            <p>Soy Sociólogo de profesión, con más de 5 años de experiencia en el mundo de los datos. Mis conocimientos de metodologías de investigación y programación, me han permitido asesorar investigaciones, desarrollar integraciones de datos con visualizadores, participar en la implementacion de proyectos de datos abiertos, segmentaciones de clientes y extracciones de datos desde diversas fuentes.
+            <p>Soy Sociólogo de profesión, con más de 5 años de experiencia 
+               en el mundo de los datos. Mis conocimientos de metodologías de investigación
+               y programación, me han permitido asesorar investigaciones, desarrollar 
+               integraciones de datos con visualizadores, participar en la implementacion 
+               de proyectos de datos abiertos, segmentaciones de clientes y extracciones 
+               de datos desde diversas fuentes.
 
             </p>
             <!-- Provide a link to your resume -->
@@ -197,12 +202,8 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          Si necesitas alguien con un perfil de investigador social para
+          explorar, analizar, entrenar y visualizar datos, no dudes en escribirme!.
         </p>
         <!-- Replace the email with yours -->
         <a href="mailto:samuelrg.sna@gmail.com" class="btn">samuelrg.sna@gmail.com</a>
