--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                  <img src="#" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
