--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
               <div class="work__links">
                 <a href="https://samuelramirez.shinyapps.io/Mapa_Valpo/" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                  Visitar Sitio <span>&rarr;</span>
                 </a>
                 <a href="#">
                   <img src="#" class="work__code" title="View Source Code" alt="#">
