--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <a href="https://www.criteria.cl/twitteria/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://www.criteria.cl/twitteria/" title="View Source Code" target="_blank">
+<!--                <a href="https://www.criteria.cl/twitteria/" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="work__image-box">
@@ -122,9 +122,7 @@
                 <a href="https://samuelramirez.shinyapps.io/Mapa_Valpo/" class="link__text">
                   Visitar Sitio <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="#" class="work__code" title="View Source Code" alt="#">
-                </a>
+
               </div>
             </div>
             <div class="work__image-box">
@@ -151,9 +149,9 @@
                 <a href="https://github.com/samuelsoc/scraper_youtube" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
+<!--                <a href="#">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="work__image-box">
