--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
               <h3>Dashboard Tendencias Twitter</h3>
               <p>
                 Dashboard que refleja las tendencias de twitter. A demas de la
-                recolección, se genera una metrica de relevancia de las Tendencias.
+                recolección, se genera una métrica de relevancia de las Tendencias basada en el horario de
+                publicación.
               </p>
               <ul class="work__list">
                 <li>R</li>
@@ -93,7 +94,7 @@
 
               <div class="work__links">
                 <a href="https://www.criteria.cl/twitteria/" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                  Visitar Sitio <span>&rarr;</span>
                 </a>
 <!--                <a href="https://www.criteria.cl/twitteria/" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
@@ -147,7 +148,7 @@
 
               <div class="work__links">
                 <a href="https://github.com/samuelsoc/scraper_youtube" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                  Visitar Sitio <span>&rarr;</span>
                 </a>
 <!--                <a href="#">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
